<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_btn_white_radius_50"
    android:orientation="vertical">

    <!-- date toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_calendar_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/previousButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_btn_left_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/currentDateLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/forwardButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_btn_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/currentDateLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_eb"
                android:gravity="center"
                android:textColor="#3C6EFF"
                android:textSize="35sp"
                tools:text="2020년 4월"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- eventDays header -->
    <LinearLayout
        android:id="@+id/abbreviationsBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mondayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_monday"
            android:textColor="#d6222b"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tuesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_tuesday"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/wednesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_wednesday"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/thursdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_thursday"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/fridayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_friday"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/saturdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_saturday"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/sundayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanum_square_eb"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_sunday"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="normal" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <com.lovely.calendarview.extensions.CalendarViewPager
            android:id="@+id/calendarViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>